--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -17,7 +17,7 @@ GlobalDefaultServerGameMode=None
 r.Mobile.ShadingPath=0
 r.Mobile.AllowDeferredShadingOpenGL=False
 r.Mobile.SupportGPUScene=True
-r.Mobile.AntiAliasing=3
+r.Mobile.AntiAliasing=0
 r.Mobile.FloatPrecisionMode=0
 r.Mobile.AllowDitheredLODTransition=False
 r.Mobile.VirtualTextures=False
@@ -103,7 +103,7 @@ r.DefaultFeature.MotionBlur=False
 r.DefaultFeature.LensFlare=False
 r.TemporalAA.Upsampling=True
 r.AntiAliasingMethod=0
-r.MSAACount=4
+r.MSAACount=1
 r.DefaultFeature.LightUnits=1
 r.DefaultBackBufferPixelFormat=4
 r.ScreenPercentage.Default=100.000000
@@ -387,4 +387,9 @@ NDKPath=(Path="C:/Users/angel/AppData/Local/Android/Sdk/ndk/25.1.8937393")
 JavaPath=(Path="C:/Program Files/Java/jdk-11")
 SDKAPILevel=latest
 NDKAPILevel=android-32
+
+[/Script/MacTargetPlatform.XcodeProjectSettings]
+CodeSigningTeam=1111111
+ApplicationDisplayName=Your App
+CodeSigningPrefix=
 
