--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -393,3 +393,6 @@ CodeSigningTeam=1111111
 ApplicationDisplayName=Your App
 CodeSigningPrefix=
 
+[/Script/IOSRuntimeSettings.IOSRuntimeSettings]
+AdditionalPlistData=<key>NSHandsTrackingUsageDescription</key><string>Hand Usage</string><key>NSMicrophoneUsageDescription</key><string>Mic Needed </string><key>NSWorldSensingUsageDescription</key><string>World Sensing</string>
+
